@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-18T08:17:51Z",
-  "count_outdated" : 339,
-  "uniques_outdated" : 192,
-  "count" : 366,
-  "uniques" : 211,
+  "timestamp" : "2022-06-19T01:21:35Z",
+  "count_outdated" : 342,
+  "uniques_outdated" : 194,
+  "count" : 369,
+  "uniques" : 212,
   "clones" : [
-    {
-      "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-05T00:00:00Z",
       "count": 1,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
